{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 97,
  "lineage": "72896a61-0296-54b8-7686-b5b8d3c6ed07",
  "resources": [
    {
      "module": "module.base-eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "base-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375584745:security-group/sg-0c5528b4a18d5ddd9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5528b4a18d5ddd9",
            "ingress": [],
            "name": "terraform-20241022143704922700000006",
            "name_prefix": "terraform-",
            "owner_id": "084375584745",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "base-sg"
            },
            "tags_all": {
              "Name": "base-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-053ccd31d7784b207"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base-vpc.aws_vpc.base-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "base-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375584745:internet-gateway/igw-028dd22265cdfc466",
            "id": "igw-028dd22265cdfc466",
            "owner_id": "084375584745",
            "tags": {
              "Name": "base-igw"
            },
            "tags_all": {
              "Name": "base-igw"
            },
            "vpc_id": "vpc-053ccd31d7784b207"
          },
          "dependencies": [
            "module.base-vpc.aws_vpc.base-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "base-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375584745:route-table/rtb-045c862c236c18f64",
            "id": "rtb-045c862c236c18f64",
            "owner_id": "084375584745",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028dd22265cdfc466",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "base-rtb"
            },
            "tags_all": {
              "Name": "base-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-053ccd31d7784b207"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base-vpc.aws_internet_gateway.base-igw",
            "module.base-vpc.aws_vpc.base-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "base-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d0ac684d761d754",
            "route_table_id": "rtb-045c862c236c18f64",
            "subnet_id": "subnet-0bee5339899514f63"
          },
          "dependencies": [
            "module.base-vpc.aws_internet_gateway.base-igw",
            "module.base-vpc.aws_route_table.base-rtb",
            "module.base-vpc.aws_subnet.base-subnets",
            "module.base-vpc.aws_vpc.base-vpc",
            "module.base-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c1a459b67bed986",
            "route_table_id": "rtb-045c862c236c18f64",
            "subnet_id": "subnet-0d868d9ee0a16d858"
          },
          "dependencies": [
            "module.base-vpc.aws_internet_gateway.base-igw",
            "module.base-vpc.aws_route_table.base-rtb",
            "module.base-vpc.aws_subnet.base-subnets",
            "module.base-vpc.aws_vpc.base-vpc",
            "module.base-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "base-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375584745:subnet/subnet-0bee5339899514f63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bee5339899514f63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "084375584745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "base-subnet-0"
            },
            "tags_all": {
              "Name": "base-subnet-0"
            },
            "vpc_id": "vpc-053ccd31d7784b207"
          },
          "dependencies": [
            "module.base-vpc.aws_vpc.base-vpc",
            "module.base-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375584745:subnet/subnet-0d868d9ee0a16d858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d868d9ee0a16d858",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "084375584745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "base-subnet-1"
            },
            "tags_all": {
              "Name": "base-subnet-1"
            },
            "vpc_id": "vpc-053ccd31d7784b207"
          },
          "dependencies": [
            "module.base-vpc.aws_vpc.base-vpc",
            "module.base-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "base-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084375584745:vpc/vpc-053ccd31d7784b207",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03dcedb85059bf8a6",
            "default_route_table_id": "rtb-0807790a9ceebcc16",
            "default_security_group_id": "sg-0a6f380176bc0a4aa",
            "dhcp_options_id": "dopt-08665b0a7d3aecf9f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053ccd31d7784b207",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0807790a9ceebcc16",
            "owner_id": "084375584745",
            "tags": {
              "Name": "base-tag-vpc"
            },
            "tags_all": {
              "Name": "base-tag-vpc"
            }
          }
        }
      ]
    }
  ]
}